Feat: 다양한 보드 형태에 대한 경로 설정 메서드 추가